# raft

./: Cargo.toml  buf.gen.yaml  readme.md
.cursor/rules/: advance-plan.mdc  checkpoint-quality.mdc  checkpoint_phase1.mdc  checkpoint_phase2_1.mdc  checkpoint_phase2_2.mdc  checkpoint_phase3.mdc  default-rule-settings.mdc  focused-tests.mdc  follow-plan.mdc  follow-prd.mdc  mock-testing-learnings.mdc  no-ai-change-comments.mdc  phase3-testing-learnings.mdc  project-apis.mdc  project-goal.mdc  prost_mismatch_and_fix.mdc  raft-core-integration-test-setup-learnings.mdc  raft-core-learnings.mdc  raft-election-testing-learnings.mdc  raft-implementation-learnings.mdc  raft-implementation-lessons.mdc  raft-leader-election-learnings.mdc  raft_storage_learnings.mdc  raft_storage_truncate_prefix_logic.mdc  raft_transport_mock_testing.mdc  rust-2024-edition.mdc  rust-async-closures.mdc  rust-dependencies.mdc  rust-project-info.mdc  rust-workspace.mdc  storage-implementation-lessons.mdc  test-feedback.mdc  test_debugging_with_prints.mdc  testing-strategies.mdc  transport-implementation-lessons.mdc
.github/: copilot-instructions.md
docs/: PLAN.md  PRD.md  overview.md
examples/cluster-demo/: Cargo.toml
proto/: buf.yaml
proto/raft/v1/: raft.proto
raft-core/: Cargo.toml
raft-core/.cursor/rules/: raft-core-types.mdc
raft-core/src/: lib.rs
raft-core/tests/: election_test.rs  unit_tests.rs
raft-grpc/: Cargo.toml
raft-storage/: Cargo.toml
raft-storage/src/: lib.rs
raft-transport/: Cargo.toml
raft-transport/src/: error.rs  lib.rs  mock.rs  network.rs
raft-transport/tests/: integration_test.rs
