[workspace]

members = [
    "raft-core",
    "raft-transport",
    "raft-storage",
    "examples/cluster-demo",
]

resolver = "2"

[workspace.dependencies]
wcygan_raft_community_neoeinstein-prost = { version = "0.4.0-20250430134232-be6664bc4787.1", registry = "buf" }
wcygan_raft_community_neoeinstein-tonic = { version = "0.4.1-20250430134232-be6664bc4787.1", registry = "buf" }
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros", "net", "time", "sync", "io-util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
bytes = "1.10.1"
thiserror = "2.0.12"
futures = "0.3.31"
rand = "0.9.1"
prost = "0.13.1"
