[package]
name = "raft-core"
version = "0.1.0"
edition = "2024"

[dependencies]
wcygan_raft_community_neoeinstein-prost = { workspace = true }
prost = { workspace = true }
# Add async-trait for async methods in traits
async-trait = { workspace = true }
# Add anyhow for error handling in trait methods
anyhow = { workspace = true }
# Add tokio for async runtime features in tests (e.g. Mutex)
tokio = { workspace = true, features = ["rt", "macros", "sync"] }
bytes = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# Add tokio for async runtime in tests
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
# Add prost for protobuf (de)serialization in tests
prost = { workspace = true }
raft-transport = { path = "../raft-transport" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
raft-storage = { path = "../raft-storage" }

[features]