[package]
name = "raft-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
wcygan_raft_community_neoeinstein-prost = { workspace = true }
async-trait = "0.1.81"
rand = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
# Dependencies needed for tests in tests/ directory
raft-storage = { path = "../raft-storage" }
raft-transport = { path = "../raft-transport" }
tokio = { workspace = true, features = ["full"] } # Ensure full features for tests
tracing-subscriber = { workspace = true, features = ["env-filter"] } # For test logging

[features]